test/mutation_analysis/s0942_di_string_match/hafis/o3/mutants/23/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/o3/mutants/23/Solution.java:26: error: unreachable statement
        for (int i = s.length() - 1; false; i--) {
                                                 ^
1 error
